Tue Aug 15 17:24:05 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/Strategies/SCIOP_Endpoint.cpp (preferred_interfaces):

          Use new ACE_CString::size_type type to hold string
          position/index value, instead of "int".  Addresses "comparison
          between signed and unsigned" warnings.

Tue Aug 15 14:56:35 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        Checking in on behalf of Justin Michel <michel_j at ociweb dot com>...

        Fixed bugs related to OCI RT8769. There were several problems 
        identified in this ticket.

        All of these changes are on the branch "OCI_Oneway_Buffering".

        1. The SyncScopes SYNC_NONE, SYNC_DELAYED_BUFFERING, and
           SYNC_EAGER_BUFFERING use non-blocking connects, but the
           non-blocking connect mechanism allows the caller to
           effectively block, because it enters the reactor.  (Even
           though it used a timeout of zero, this still makes it
           possible for the caller to be blocked.)  The solution is to
           queue any messages until the connection is complete, and to
           rely on the reactor to complete the connection. This was
           already implemented, and the fix just involved NOT polling
           the reactor. A side-effect of this change, is that
           applications that make connections within oneway requests
           with the above SyncScope policies must call orb->run() to
           complete the connection. Alternatively an invocation that
           doesn't use the above SyncScopes can be made to complete
           the connection.

        2. Connection and request timeouts did not work correctly for
           every scenario. (e.g. For non-blocking connects, the
           request timeout should not be used even if it's less than
           the connect timeout, because the connect does not happen in
           the context of the request.)  The fix required numerous